# biz/handler/auth/banner_service.go
@@ -1,0 +1,76 @@
+// Code generated by hertz generator.
+
+package auth
+
+import (
+	"context"
+
+	"github.com/cloudwego/hertz/pkg/app"
+	"github.com/cloudwego/hertz/pkg/protocol/consts"
+	auth "saas/idl_gen/model/auth"
+	base "saas/idl_gen/model/base"
+)
+
+// CreateBanner .
+// @router /service/banner/create [POST]
+func CreateBanner(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req auth.BannerInfo
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	resp := new(base.NilResponse)
+
+	c.JSON(consts.StatusOK, resp)
+}
+
+// UpdateBanner .
+// @router /service/banner/update [POST]
+func UpdateBanner(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req auth.BannerInfo
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	resp := new(base.NilResponse)
+
+	c.JSON(consts.StatusOK, resp)
+}
+
+// BannerList .
+// @router /service/banner/list [POST]
+func BannerList(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req base.PageInfoReq
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	resp := new(base.NilResponse)
+
+	c.JSON(consts.StatusOK, resp)
+}
+
+// UpdateBannerShow .
+// @router /service/banner/show [POST]
+func UpdateBannerShow(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req base.StatusCodeReq
+	err = c.BindAndValidate(&req)
+	if err != nil {
+		c.String(consts.StatusBadRequest, err.Error())
+		return
+	}
+
+	resp := new(base.NilResponse)
+
+	c.JSON(consts.StatusOK, resp)
+}
