# biz/router/auth/banner.go
@@ -1,0 +1,30 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package auth
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	auth "saas/biz/handler/auth"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_service := root.Group("/service", _serviceMw()...)
+		{
+			_banner := _service.Group("/banner", _bannerMw()...)
+			_banner.POST("/create", append(_createbannerMw(), auth.CreateBanner)...)
+			_banner.POST("/list", append(_bannerlistMw(), auth.BannerList)...)
+			_banner.POST("/show", append(_updatebannershowMw(), auth.UpdateBannerShow)...)
+			_banner.POST("/update", append(_updatebannerMw(), auth.UpdateBanner)...)
+		}
+	}
+}
