# biz/router/banner/banner.go
@@ -1,0 +1,31 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package banner
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	banner "saas/biz/handler/banner"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_service := root.Group("/service", _serviceMw()...)
+		{
+			_banner := _service.Group("/banner", _bannerMw()...)
+			_banner.POST("/create", append(_createbannerMw(), banner.CreateBanner)...)
+			_banner.POST("/del", append(_delbannerMw(), banner.DelBanner)...)
+			_banner.POST("/list", append(_bannerlistMw(), banner.BannerList)...)
+			_banner.POST("/show", append(_updatebannershowMw(), banner.UpdateBannerShow)...)
+			_banner.POST("/update", append(_updatebannerMw(), banner.UpdateBanner)...)
+		}
+	}
+}
